--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -122,7 +122,7 @@ p {
      <div class="gridContainer2">
  <h3>About Me</h3> 
 <h4>-Skills-</h4>
-<div class="img3">
+<div id= "img_row" class="img3">
   <img src="images/social justice.jpg" style="max-width:100; height:auto;" />
 <img src="images/painting.jpg" style="width:5; height:auto;" />
   <img src="images/mockup.jpg" style="width:5; height:auto;" />
@@ -132,7 +132,7 @@ p {
         logo design, character design and Wordpress website design. 
     </p>
     <h4>-Experience-</h4>
-  <div class="img3">
+  <div id= "img_row2" class="img3">
   <img src="images/graduation.jpg" style="max-width:100; height:auto;" />
   </div>
     <p>Business Certificate of Applied Science, Associates Degree,
