--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -133,7 +133,7 @@ p {
     </p>
     <h4>-Experience-</h4>
   <div id= "img_row2" class="img3">
-  <img src="images/graduation.jpg" style="max-width:100; height:auto;" />
+  <img src="images/graduation.jpg" style="max-width:100; height:auto;" />w``
   </div>
     <p>Business Certificate of Applied Science, Associates Degree,
        4 years of Graphic Arts experience! Working on my final semester for my 
@@ -141,7 +141,7 @@ p {
 
     <hr />
     <h3>What Inspires Me?</h3>
-    <div class="img3">
+    <div id="img_row3" class="img3">
       <img src="images/animals.jpg" style="width:100; height:auto;" />
       <img src="images/ocean.jpg" style="width:5; height:auto;" />
       <img src="images/pokemon.jpg" style="width:5; height:auto;" />
@@ -155,7 +155,7 @@ p {
     <h4>Hobbies include...</h4> 
 
     <p><i>not my art</i></p>
-    <div class="img4">
+    <div  id="img_row4" class="img4">
       <img src="images/character.jpg" style="width:100; height:auto;" />
       <img src="images/sketch.jpg" style="width:5; height:auto;" />
       <img src="images/vrchat.jpg" style="width:5; height:auto;" />
