--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -174,7 +174,7 @@ border-bottom: solid black 14px;
        
     </tr>
  </table>
- <div  id="img_row" class="img4">
+ <div class="img">
     <img src="images/sprigatito.jpg" style="width:100; height:auto;" />
     <img src="images/fuecoco.jpg" style="width:5; height:auto;" />
     <img src="images/quaxly.jpg" style="width:5; height:auto;" />
