--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -113,8 +113,9 @@ border-bottom: solid black 14px;
 .img {
   display: flex;
   margin-right: auto;
-  width:auto;
-  height:100%;
+  margin-left: auto;
+  display: block;
+  margin: auto;
   background-color: darkgreen;
   border-radius:50%
 }
