--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -112,10 +112,11 @@ border-bottom: solid black 14px;
 
 .img {
   display: flex;
-  margin-right: auto;
-  margin-left: auto;
   display: block;
   margin: auto;
+  width: 40px;
+  height:60px;
+
   background-color: darkgreen;
   border-radius:50%
 }
