--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -113,8 +113,6 @@ border-bottom: solid black 14px;
 .img {
   display: block;
   margin: auto;
-  width: 40px;
-  height:60px;
 
   background-color: darkgreen;
   border-radius:50%
@@ -176,9 +174,9 @@ border-bottom: solid black 14px;
     </tr>
  </table>
  <div class="img">
-    <img src="images/sprigatito.jpg" style="width:5; height:auto;" />
-    <img src="images/fuecoco.jpg" style="width:5; height:auto;" />
-    <img src="images/quaxly.jpg" style="width:5; height:auto;" />
+    <img src="images/sprigatito.jpg" style="width:15px; height:10px;" />
+    <img src="images/fuecoco.jpg" style="width:15px; height:10px;" />
+    <img src="images/quaxly.jpg" style="width:15px; height:10px;" />
   </div>
 </body>
 </html>
