--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -110,15 +110,10 @@ border-bottom: solid black 14px;
     background-image: url(https://wallpaperaccess.com/full/3949372.jpg);
 }
 
-.img {
-  display: block;
-  margin: auto;
-
-  background-color: darkgreen;
-  border-radius:50%
+.img{
+  height:10px;
+  width:10px;
 }
-
-
 
    </style>
   </head>
@@ -174,9 +169,9 @@ border-bottom: solid black 14px;
     </tr>
  </table>
  <div class="img">
-    <img src="images/sprigatito.jpg" style="width:15px; height:10px;" />
-    <img src="images/fuecoco.jpg" style="width:15px; height:10px;" />
-    <img src="images/quaxly.jpg" style="width:15px; height:10px;" />
+    <img src="images/sprigatito.jpg" />
+    <img src="images/fuecoco.jpg" />
+    <img src="images/quaxly.jpg" />
   </div>
 </body>
 </html>
