--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -111,8 +111,8 @@ border-bottom: solid black 14px;
 }
 
 .img{
-  height:10px;
-  width:10px;
+  height: auto;
+  max-width: 100%;
 }
 
    </style>
