--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -110,9 +110,11 @@ border-bottom: solid black 14px;
     background-image: url(https://wallpaperaccess.com/full/3949372.jpg);
 }
 
-.img{
-  height: auto;
-  max-width: 100%;
+.img {
+  max-width: 28%;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
    </style>
