--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -110,11 +110,12 @@ border-bottom: solid black 14px;
     background-image: url(https://wallpaperaccess.com/full/3949372.jpg);
 }
 
-.img {
-  max-width: 28%;
-  height: 90px;
-  margin-left: auto;
+.img3 {
+  display: flex;
   margin-right: auto;
+  width:auto;
+  height:100%;
+  background-color: darkgreen;
 }
 
    </style>
@@ -170,7 +171,7 @@ border-bottom: solid black 14px;
        
     </tr>
  </table>
- <div class="img">
+ <div class="img3">
     <img src="images/sprigatito.jpg" />
     <img src="images/fuecoco.jpg" />
     <img src="images/quaxly.jpg" />
