--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -111,10 +111,9 @@ border-bottom: solid black 14px;
 }
 
 .img3 {
-  display: flex;
-  margin-right: auto;
-  width:auto;
-  height:100%;
+ 
+  max-width: 50%;
+  height:auto;
   background-color: darkgreen;
 }
 
