--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -110,11 +110,7 @@ border-bottom: solid black 14px;
     background-image: url(https://wallpaperaccess.com/full/3949372.jpg);
 }
 
-.img3 {
- 
-max-width: 100%;
-height: auto;
-}
+
 
    </style>
   </head>
@@ -169,14 +165,12 @@ height: auto;
        
     </tr>
  </table>
- <div class="img3">
-    <img src="images/sprigatito.jpg" />
-    <img src="images/fuecoco.jpg" />
-    <img src="images/quaxly.jpg" />
-  </div>
+    <img src="/experimenting-folder/images/sprigatito.jpg" width="500" height="600">
+    <img src="/experimenting-folder/images/fuecoco.jpg" width="500" height="600">
+    <img src="/experimenting-folder/images/quaxly.jpg" width="500" height="600">
 </body>
 </html>
-    
+  
 
 
 
