--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -170,10 +170,9 @@ border-bottom: solid black 14px;
        
     </tr>
  </table>
- <div class="img3">
-    <img src="images/sprigatito.jpg" />
-    <img src="images/fuecoco.jpg" />
-    <img src="images/quaxly.jpg" />
+  <img src="/experimenting-folder/images/sprigatito.jpg" width="500" height="600">
+    <img src="/experimenting-folder/images/fuecoco.jpg" width="500" height="600">
+    <img src="/experimenting-folder/images/quaxly.jpg" width="500" height="600">
   </div>
 </body>
 </html>
