--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -170,9 +170,9 @@ border-bottom: solid black 14px;
        
     </tr>
  </table>
-  <img src="/experimenting-folder/images/sprigatito.jpg" width="5" height="6">
-    <img src="/experimenting-folder/images/fuecoco.jpg" width="5" height="6">
-    <img src="/experimenting-folder/images/quaxly.jpg" width="5" height="6">
+  <img src="images/sprigatito.jpg" width="5" height="6">
+    <img src="images/fuecoco.jpg" width="5" height="6">
+    <img src="images/quaxly.jpg" width="5" height="6">
   </div>
 </body>
 </html>
