--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -74,6 +74,11 @@ ol {
     color: white;
 }
 
+ul{
+  white-space:nowrap;
+
+}
+
 .bottom-list2 {
     border-bottom: solid black ;
     background-color:chocolate;
@@ -94,7 +99,7 @@ ol {
 .bottom-list3 {
     border-bottom:solid black 9px;
     background-color:chocolate;
-    padding-left: 50px;
+    padding-left: 51px;
     padding-right: 50px;
     font-size:large;
 }
@@ -110,12 +115,30 @@ border-bottom: solid black 14px;
     background-image: url(https://wallpaperaccess.com/full/3949372.jpg);
 }
 
-.img3 {
- 
-  max-width: 50%;
-  height:auto;
-  background-color: darkgreen;
+.imagerow {
+  background-color: rgb(29, 28, 28);
+  width: auto;
+  height: 100%;
 }
+
+.left {
+  float: left;
+  margin-top: 35px;
+  border: solid orange;
+}
+
+.right{
+  display: right;
+}
+
+section {
+  border: solid black;
+  margin-top: 50px;
+  border-bottom: solid black 12px;
+}
+
+
+
 
    </style>
   </head>
@@ -128,7 +151,7 @@ border-bottom: solid black 14px;
 </header>
   <body class="main">  
     <div class="videobgimage">
-     <iframe width="760" height="515" 
+     <iframe width="740" height="450" 
      src="https://www.youtube.com/embed/ZCdieZTLbus" 
      title="YouTube video player"  
      allow="accelerometer; autoplay; 
@@ -167,20 +190,32 @@ border-bottom: solid black 14px;
        <td>3</td>
        <td>12</td>
        <td>1</td>
-       
     </tr>
- </table>
-  <img src="images/sprigatito.jpg" width="40" height="50">
-    <img src="images/fuecoco.jpg" width="40" height="50">
-    <img src="images/quaxly.jpg" width="40" height="50">
-  </div>
-</body>
-</html>
-    
+  </table>
+   </div>
+  <p style="text-align:center; background-color:rgb(81, 74, 74); border: solid black";>
+    <img src="images/character copy.jpg">
+    <img src="images/character copy.jpg">
+    </p>
+    <section>
+      <div class="left">
+        <img src="images/vrchat copy.jpg">
+        </div>
+        <div class="right">
+        <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
+        <b>Chris Viau’s work straddles the line between abstract and representational. This is due to his planned, yet dynamic, brush and line work. Upon first glance one sees a blend of colors and textures that reveal themselves as lush landscapes or weathered coastlines.
 
+“My favorite thing about being an artist is I can let my wild imagination show. The images that inspire me are landscapes. I feel that making landscapes is the best way to show my talent as an artist. Mostly I use watercolors for the background. I use pastel, acrylic, or colored pencils to give my artwork detail.”
 
+Viau approaches art making with a high level of enthusiasm and is eager to experiment with new techniques. In addition to painting, he is a published poet. He has published three illustrated, poetry books: Chicago Seasons, Being in Harmony with Nature, and My Own Ways Through This Life.
 
+Viau’s art has been featured on studio merchandise, local galleries and the Arts of Life partner, ArtLifting.com. He also acts as the studio archivist, cataloguing the many pieces of art produced in the studio.
 
+“In five years, I see myself as a role model for young adults with disabilities. I will most likely still be doing art and writing poems.”
 
-
-
+Check out Chris’s 2021 Artist of the Month interview here. </b>b>
+      </p>
+      </div>
+    </section>
+ </body>
+ </html>
