--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -1,7 +1,62 @@
-<head>
-    <body>
-        <h>
-            hello world!
-        </h>
-    </body>
-</head>
+
+    <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignment 2</title>
+      <style>
+   @media only screen and (max-width: 600px) {
+}
+@media only screen and (min-width: 600px) {
+}
+@media only screen and (min-width: 768px) {
+}
+@media only screen and (min-width: 992px) {
+}
+@media only screen and (min-width: 1200px) {
+}
+
+.main {
+background-color: rgb(5, 5, 86)
+}
+
+img {
+  display: inline;
+  max-width: 100%;
+  height: auto;
+}
+
+.img2 {
+  display: inline;
+  border: solid lightblue 4px;
+  max-width: 70%; 
+  height:auto;
+}
+
+</style>
+    </head>
+    <body class="main">
+        <h1 style="text-align:center;font-size:120px; color: lightblue;"">
+        Pufferfish!
+        </h1>
+        
+       <p style="text-align:center; background-color:rgb(81, 74, 74); border: solid black";>
+            <img src="image/pufferfish.jpeg">
+       </p>
+       <section>
+        <p style="text-align:center;">
+          <img src="image/puffer2.jpeg">
+     </p>
+       </section>
+       <p style="text-align:center; color:white; font-size: 50px;">
+        tis a cute pufferfish!
+      </p>
+
+       <script>
+        console.log ("Youtube, Discord, and Serebii. Super Mario Galaxy, Zelda Breath of the Wild.  My main artistic influence is the creature designer Wayne Douglas Barlow, who creates fantastical worlds and reveals inspiring imagination! His work includes the film Avatar, and books of the likes of 'Expedition' and 'Barlow's Inferno."); 
+        </script>
+
+
+        </body>
+        </html>
