--- a/experimenting-folder/index.html
+++ b/experimenting-folder/index.html
@@ -42,7 +42,7 @@ table {
     border-bottom: solid black 10px;
 }
 
-table, th, td { 
+table { 
     /*remember multiple selectors to apply css to all*/
 margin-left: auto;
   margin-right: auto;
@@ -50,10 +50,6 @@ margin-left: auto;
   height:100%;
   size: 30px;
   font-size: 30px;
-}
-
-.tableimage {
- background-image: url(https://wallpaperaccess.com/full/3949372.jpg);
 }
 
 th {
@@ -64,7 +60,7 @@ th {
 
 td {
     background-color: goldenrod;
-    border: solid darkorange;
+  
 }
 
 ol {
