--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -42,11 +42,11 @@ img {
         </h1>
         
        <p style="text-align:center; background-color:rgb(81, 74, 74); border: solid black";>
-            <img src="pufferfish.jpeg">
+            <img src="image/pufferfish.jpeg">
        </p>
        <section>
         <p style="text-align:center;">
-          <img src="puffer2.jpeg">
+          <img src="image/puffer2.jpeg">
      </p>
        </section>
        <p style="text-align:center; color:white; font-size: 50px;">
