--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -133,7 +133,13 @@ section {
   border-bottom: solid black 12px;
 }
 
-
+.bgsection {
+  background-image: url(https://cdn.sanity.io/images/2yyup5mx/production/d5a915cd9db3444998926f61645b6f83a53aced0-5000x2813.jpg);
+background-repeat: no-repeat;
+background-position: center center;
+background-attachment: fixed;
+background-size: cover;
+        }
 
 
    </style>
@@ -212,6 +218,8 @@ Viau’s art has been featured on studio merchandise, local galleries and the Ar
 Check out Chris’s 2021 Artist of the Month interview here. </b>b>
       </p>
       </div>
+    </section>
+    <section class="bgsection">
     </section>
  </body>
  </html>
