--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -220,6 +220,8 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
       </div>
     </section>
     <section class="bgsection">
+      <p style="text-align:center; font-size-xx-large: color black;">
+        the fitness gram pacer test
     </section>
  </body>
  </html>
