--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -192,7 +192,7 @@ section {
     <img src="images/character copy.jpg">
     <img src="images/character copy.jpg">
     </p>
-    <section>
+    <section style= "background-color: grey";>
       <div class="left">
         <img src="images/vrchat copy.jpg">
         </div>
@@ -211,6 +211,7 @@ Viau’s art has been featured on studio merchandise, local galleries and the Ar
 Check out Chris’s 2021 Artist of the Month interview here. </b>b>
       </p>
       </div>
+    </section>
  </body>
  </html>
 
