--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -194,7 +194,7 @@ section {
     </p>
     <section style= "background-color: grey";>
       <div class="left">
-        <img src="images/vrchat copy.jpg">
+        <img src="https://images.unsplash.com/photo-1548504769-900b70ed122e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80">
         </div>
         <div class="right">
         <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
