--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -134,7 +134,10 @@ section {
   border-bottom: solid black 12px;
 }
 
-
+        .imgresize {
+        width: 80px;
+          height: 80px; 
+        }
    </style>
   </head>
   <header>
@@ -194,7 +197,7 @@ section {
     </p>
     <section style= "background-color: grey";>
       <div class="left">
-        <img style= "width:80 px"; "height:70 px"; src="https://images.unsplash.com/photo-1548504769-900b70ed122e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80">
+        <img class="imgresize"; src="https://images.unsplash.com/photo-1548504769-900b70ed122e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80">
         </div>
         <div class="right">
         <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
