Update images and text side by side practice.html

--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -37,11 +37,19 @@ section {
   float:right;
 }
 
+        .imgresize {
+        width: 100%;
+        height: auto;}
+       
+        .imgresize2 {
+        width: 100%;
+        height: auto;}
+        
    </style>
   </head>
  <section>
       <div class="left">
-        <img src="images/vrchat copy.jpg">
+        <img class="imgresize" src="images/vrchat copy.jpg">
         </div>
         <div class="right">
         <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
@@ -61,7 +69,7 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
     </section>
     <section>
       <div class="right2">
-        <img src="images/vrchat copy.jpg">
+        <img class="imgresize2" src="images/vrchat copy.jpg">
         </div>
         <div class="right">
         <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
