Update images and text side by side practice.html

--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -23,7 +23,7 @@
   border: solid orange;
 }
 
-.right{
+.inline {
   display: inline;
 }
 
@@ -33,25 +33,22 @@ section {
   border-bottom: solid black 12px;
 }
 
-.right2 {
+.right {
   float:right;
 }
 
-        .imgresize {
+        .imgrespond {
         width: 100%;
-        height: auto;}
-       
-        .imgresize2 {
-        width: 100%;
-        height: auto;}
+        height: auto; 
+        }
         
    </style>
   </head>
  <section>
       <div class="left">
-        <img class="imgresize" src="images/vrchat copy.jpg">
+        <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
-        <div class="right">
+        <div class="inline">
         <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
         <b>Chris Viau’s work straddles the line between abstract and representational. This is due to his planned, yet dynamic, brush and line work. Upon first glance one sees a blend of colors and textures that reveal themselves as lush landscapes or weathered coastlines.
 
@@ -68,10 +65,10 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
       </div>
     </section>
     <section>
-      <div class="right2">
-        <img class="imgresize2" src="images/vrchat copy.jpg">
+      <div class="right">
+        <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
-        <div class="right">
+        <div class="inline">
         <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
         <b>Chris Viau’s work straddles the line between abstract and representational. This is due to his planned, yet dynamic, brush and line work. Upon first glance one sees a blend of colors and textures that reveal themselves as lush landscapes or weathered coastlines.
 
