--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -16,6 +16,15 @@
 }
 @media only screen and (min-width: 1200px) {
 }
+        
+        
+        .title {
+        font-size: 8vw;
+          float: left;
+          padding: 10px;
+          margin-left: 20px;
+            color: white;
+        }
 
 .links {
     text-align: center;
@@ -146,6 +155,9 @@ section {
     <a href="https://www.youtube.com"><b>Youtube</b></a>
     <a href="https://www.facebook.com"><b>Facebook</b></a>
 <div>
+  <h1 class= "title">
+    Practice Code
+   </h1>
 </header>
   <body class="main">  
     <div class="videobgimage">
