--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -28,7 +28,7 @@
 
 .links {
     text-align: center;
-    font-size:30px;
+    font-size: 2vw;
     padding: 10px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-image: url(https://images.unsplash.com/photo-1548504769-900b70ed122e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80);
