Update images and text side by side practice.html

--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -21,6 +21,7 @@
   float: left;
   margin-top: 35px;
   border: solid orange;
+  margin-left: 40px;
 }
 
 .inline {
@@ -35,6 +36,9 @@ section {
 
 .right {
   float:right;
+  margin-top: 35px;
+  border: solid orange;
+  margin-right: 40px;
 }
 
         .imgrespond {
