Update images and text side by side practice.html

--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -26,7 +26,7 @@
 
 .inline {
   display: inline;
-}
+  }
 
 section {
   border: solid black;
@@ -88,6 +88,13 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
       </p>
       </div>
     </section>
+  <p style= "text-align: center; padding: 50px;">
+    
+Viau’s art has been featured on studio merchandise, local galleries and the Arts of Life partner, ArtLifting.com. He also acts as the studio archivist, cataloguing the many pieces of art produced in the studio.
+
+“In five years, I see myself as a role model for young adults with disabilities. I will most likely still be doing art and writing poems.”
+
+Check out Chris’s 2021 Artist of the Month interview here
  </body>
  </html>
 
