--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -41,6 +41,8 @@ section {
   margin-right: 40px;
 }
 
+       .seperate: { margin-top: 120px;
+        }
         .imgrespond {
         width: 100%;
         height: auto; 
@@ -68,7 +70,7 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
       </p>
       </div>
     </section>
-    <section>
+    <section class="seperate">
       <div class="right">
         <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
