--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -41,8 +41,7 @@ section {
   margin-right: 40px;
 }
 
-       .seperate: { margin-top: 120px;
-        }
+       
         .imgrespond {
         width: 100%;
         height: auto; 
@@ -70,7 +69,7 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
       </p>
       </div>
     </section>
-    <section class="seperate">
+    <section style= "margin-top: 120px;">
       <div class="right">
         <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
