Update images and text side by side practice.html

--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -47,6 +47,9 @@ section {
         height: auto; 
         }
         
+        .seperate {
+        margin-top:4000px;
+        }
    </style>
   </head>
  <section>
@@ -69,7 +72,7 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
       </p>
       </div>
     </section>
-    <section style= "margin-top: 6000 px;">
+    <section class="seperate">
       <div class="right">
         <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
