--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -57,7 +57,7 @@ section {
         <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
         <div class="inline">
-        <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
+        <p style="width: auto; height: auto; font-size:large; padding: 50px;">      
         <b>Chris Viau’s work straddles the line between abstract and representational. This is due to his planned, yet dynamic, brush and line work. Upon first glance one sees a blend of colors and textures that reveal themselves as lush landscapes or weathered coastlines.
 
 “My favorite thing about being an artist is I can let my wild imagination show. The images that inspire me are landscapes. I feel that making landscapes is the best way to show my talent as an artist. Mostly I use watercolors for the background. I use pastel, acrylic, or colored pencils to give my artwork detail.”
@@ -77,7 +77,7 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
         <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
         <div class="inline">
-        <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
+        <p style="width: auto; height: auto; font-size:large; padding: 50px;">      
         <b>Chris Viau’s work straddles the line between abstract and representational. This is due to his planned, yet dynamic, brush and line work. Upon first glance one sees a blend of colors and textures that reveal themselves as lush landscapes or weathered coastlines.
 
 “My favorite thing about being an artist is I can let my wild imagination show. The images that inspire me are landscapes. I feel that making landscapes is the best way to show my talent as an artist. Mostly I use watercolors for the background. I use pastel, acrylic, or colored pencils to give my artwork detail.”
