Update images and text side by side practice.html

--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -45,6 +45,7 @@ section {
         .imgrespond {
         width: 100%;
         height: auto; 
+        padding:12px;
         }
         
         .seperate {
