Update images and text side by side practice.html

--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -39,6 +39,7 @@ section {
   margin-top: 20px;
   border: solid orange;
   margin-right: 40px;
+  padding: 12px;
 }
 
        
@@ -58,7 +59,7 @@ section {
         <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
         <div class="inline">
-        <p style="width: auto; height: auto; font-size:large; padding: 50px;">      
+        <p style="width: auto; height: auto; font-size:large;">      
         <b>Chris Viau’s work straddles the line between abstract and representational. This is due to his planned, yet dynamic, brush and line work. Upon first glance one sees a blend of colors and textures that reveal themselves as lush landscapes or weathered coastlines.
 
 “My favorite thing about being an artist is I can let my wild imagination show. The images that inspire me are landscapes. I feel that making landscapes is the best way to show my talent as an artist. Mostly I use watercolors for the background. I use pastel, acrylic, or colored pencils to give my artwork detail.”
@@ -78,7 +79,7 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
         <img class="imgrespond" src="images/vrchat copy.jpg">
         </div>
         <div class="inline">
-        <p style="width: auto; height: auto; font-size:large; padding: 50px;">      
+        <p style="width: auto; height: auto; font-size:large;">      
         <b>Chris Viau’s work straddles the line between abstract and representational. This is due to his planned, yet dynamic, brush and line work. Upon first glance one sees a blend of colors and textures that reveal themselves as lush landscapes or weathered coastlines.
 
 “My favorite thing about being an artist is I can let my wild imagination show. The images that inspire me are landscapes. I feel that making landscapes is the best way to show my talent as an artist. Mostly I use watercolors for the background. I use pastel, acrylic, or colored pencils to give my artwork detail.”
