--- a/experimenting-folder/images and text side by side practice.html
+++ b/experimenting-folder/images and text side by side practice.html
@@ -21,7 +21,6 @@
   float: left;
   margin-top: 20px;
   border: solid orange;
-  margin-left: 7px;
 }
 
 .inline {
@@ -44,10 +43,15 @@ section {
        
         .imgrespond {
         width: 100%;
-        height: auto; 
-        padding:12px;
+        height: auto;
         }
         
+        .imgrespond2 {
+           width: 100%;
+        height: auto; 
+        padding:12px;
+
+        }
         .seperate {
         margin-top:300px;
         }
@@ -77,7 +81,7 @@ Check out Chris’s 2021 Artist of the Month interview here. </b>b>
     </section>
     <section class="seperate">
       <div class="right">
-        <img class="imgrespond" src="images/vrchat copy.jpg">
+        <img class="imgrespond2" src="images/vrchat copy.jpg">
         </div>
         <div class="inline">
         <p style="width: auto; height: auto; font-size:large; padding-left: 5px;">      
