--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -212,7 +212,7 @@ section {
         <img class="imgresize"; src="https://images.unsplash.com/photo-1548504769-900b70ed122e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80">
         </div>
         <div class="right">
-        <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
+        <p style="width: auto; height: auto; font-size:4vw; margin-top: 50px;">      
         <b>Chris Viau’s work straddles the line between abstract and representational. This is due to his planned, yet dynamic, brush and line work. Upon first glance one sees a blend of colors and textures that reveal themselves as lush landscapes or weathered coastlines.
 
 “My favorite thing about being an artist is I can let my wild imagination show. The images that inspire me are landscapes. I feel that making landscapes is the best way to show my talent as an artist. Mostly I use watercolors for the background. I use pastel, acrylic, or colored pencils to give my artwork detail.”
