--- a/experimenting-folder/practice code.html
+++ b/experimenting-folder/practice code.html
@@ -35,7 +35,11 @@ a:hover {
 
 
 .main {
-    background-color: grey;
+     background-image: url(https://cdn.sanity.io/images/2yyup5mx/production/d5a915cd9db3444998926f61645b6f83a53aced0-5000x2813.jpg);
+background-repeat: no-repeat;
+background-position: center center;
+background-attachment: fixed;
+background-size: cover;
 }
 
 table {
@@ -107,9 +111,6 @@ margin: auto;
 border-bottom: solid black 14px;
 }
 
-.videobgimage{
-    background-image: url(https://wallpaperaccess.com/full/3949372.jpg);
-}
 
 .imagerow {
   background-color: rgb(29, 28, 28);
@@ -118,7 +119,7 @@ border-bottom: solid black 14px;
 }
 
 .left {
-  float: left;
+  float: right;
   margin-top: 35px;
   border: solid orange;
 }
@@ -133,9 +134,12 @@ section {
   border-bottom: solid black 12px;
 }
 
+        .imgresize {
+        width: 300px;
+          height: 300px; 
+        }
 
-
-
+       
    </style>
   </head>
   <header>
@@ -193,9 +197,9 @@ section {
     <img src="images/character copy.jpg">
     <img src="images/character copy.jpg">
     </p>
-    <section>
+    <section style= "background-color: grey";>
       <div class="left">
-        <img src="images/vrchat copy.jpg">
+        <img class="imgresize"; src="https://images.unsplash.com/photo-1548504769-900b70ed122e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80">
         </div>
         <div class="right">
         <p style="width: auto; height: auto; font-size:large; margin-top: 50px;">      
