--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -164,6 +164,7 @@ img:hover {
     float: left;
     padding-left:20px;
     padding-right:20px;
+    padding-bottom:20px;
     font-size:1.5vw;
     color:black;
     font-weight:800;
