--- a/assignment-4/index.html
+++ b/assignment-4/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -42,12 +42,15 @@
                 theStory.innerHTML="Thank you for your input, <br> I will continue to grow <br> in the future and happy <br> to hear I have gained <br> experience! <br> <br> Restart?(enter restart in the box)";
     
             }
-            else if(myAnswer==="no")
+            else if(myAnswer==="no"){
                 theStory.innerHTML="Thank you for your input, <br> I will try to grow more <br> and do better in the future! <br> <br> Restart?(enter restart in the box)";
-
-            else if(myAnswer==="restart")
+            }
+            else if(myAnswer==="restart"){
             theStory.innerHTML= "A brand new commercial Space flight is about to begin, <br> launching off into the Stratosphere to get a good glimpse<br> of our world! In front of you are two colored buttons, <br>one large and green and the other small and yellow.<br> You don't know what any of them do, which one<br>will you press? <br><br>(enter either green or yellow in the<br> white box, then press 'activate'!";
+            }
         }
+
+
     </script>
       <style>
 
@@ -186,7 +189,3 @@ background-size: cover;
     
  </body>
  </html>
-
-
-
-
