--- a/assignment-8/index.html
+++ b/assignment-8/index.html
@@ -224,9 +224,14 @@ $("#bigrectangle3").animate({top:820}).delay(500).animate({top:780});
    
     </script>
     <style>
+        @font-face {
+font-family: "Nature Font";
+src: url("GREEN NATURE.ttf"; ) ;
+}
 
         body {
             background-color: rgb(182, 156, 124);
+            { font-family: "Nature Font" }
         }
 
         h1{
