--- a/assignment-8/index.html
+++ b/assignment-8/index.html
@@ -228,6 +228,10 @@ $("#bigrectangle3").animate({top:820}).delay(500).animate({top:780});
 font-family: "Nature Font";
 src: url("GREEN NATURE.ttf"; ) ;
 }
+       @font-face {
+font-family: "Leaf Wingdings";
+src: url("Leafs.ttf"; ) ;
+}
 
         body {
             background-color: rgb(182, 156, 124);
@@ -246,7 +250,7 @@ src: url("GREEN NATURE.ttf"; ) ;
         }
 
         .flowers {
-            font-family: 'Leafs';
+            font-family: 'Leaf Wingdings';
             text-align: center;
             font-size:2vw;
         }
