--- a/assignment-8/index.html
+++ b/assignment-8/index.html
@@ -226,7 +226,7 @@ $("#bigrectangle3").animate({top:820}).delay(500).animate({top:780});
     <style>
         @font-face {
 font-family: Nature Font;
-src: url(GREEN NATURE.ttf);
+src: url(https://github.com/bryceblue20/MART-441/blob/main/assignment-8/GREEN%20NATURE.ttf);
 }
      
 
