--- a/assignment-8/index.html
+++ b/assignment-8/index.html
@@ -233,7 +233,7 @@ $("#bigrectangle3").animate({top:820}).delay(500).animate({top:780});
         }
 
         h1{
-            font-family:'Tahoma', sans-serif;
+            font-family:'Georgia', serif;
             font-size: 5vw;
             text-align:center;
         }
