--- a/assignment-9/index.html
+++ b/assignment-9/index.html
@@ -121,7 +121,7 @@ $("#recall").click(function () {
                 + "<br>" + food.productdistribution.description3 + "<br>" + food.productdistribution.description4;
                 }
             };
-            xhttp.open("GET", "foodInfo.json", true);
+            xhttp.open("GET", "foodinfo.json", true);
             xhttp.send();
         }
      </script>
