--- a/assignment-8/index.html
+++ b/assignment-8/index.html
@@ -226,8 +226,8 @@ $("#bigrectangle3").animate({top:820}).delay(500).animate({top:780});
     <style>
         
         @font-face {
-        font-family: Nature;
-        src: url(GREEN NATURE.tff);
+        font-family: "Nature";
+        src: url("GREEN NATURE.tff");
         }
 
         body {
@@ -236,7 +236,7 @@ $("#bigrectangle3").animate({top:820}).delay(500).animate({top:780});
         }
  
         h1{
-            font-family: Nature;
+            font-family: "Nature";
             font-size: 5vw;
             text-align: center;
         }
