--- a/assignment-8/index.html
+++ b/assignment-8/index.html
@@ -236,14 +236,14 @@ $("#bigrectangle3").animate({top:820}).delay(500).animate({top:780});
         }
  
         h1{
-            font-family: "Nature";
-            font-size: 5vw;
+            font-family: 'luminari',fantasy;
+            font-size: 5.3vw;
             text-align: center;
         }
 
         p {
-            font-family:'';
-            font-size:2.3vw;
+            font-family:'luminari',fantasy;
+            font-size:2.5vw;
         }
 
         
@@ -452,7 +452,7 @@ $("#bigrectangle3").animate({top:820}).delay(500).animate({top:780});
             <div id="bigrectangle3"></div>
        
             <h1>
-                Our Nature
+                OUR NATURE
             </h1>
             <br>
             <section style="text-align:center">
