--- a/assignment-9/index.html
+++ b/assignment-9/index.html
@@ -254,7 +254,7 @@ table,
     </div>
     <div style="font-size:80px;
     font-family: impact, sans-serif;font-weight:800; text-align:center; color:rgb(188, 26, 26);">Product Recall
-     <div style="text-align:center; font-size: 40px; font-family: Phosphate; color: rgb(188, 26, 26)">Cytodetox</div>
+     <div style="text-align:center; font-size: 40px; font-family: impacy, sans-serif; color: rgb(188, 26, 26)">Cytodetox</div>
     <div id="warnings">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Warning.svg/1200px-Warning.svg.png" width="70px" height="70px";>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Achtung.svg/628px-Achtung.svg.png" width="70px" height="70px";>
