--- a/assignment-9/index.html
+++ b/assignment-9/index.html
@@ -234,7 +234,6 @@ table,
             border: 1px solid black;
             border-collapse: collapse;
         }
-
         th,
         td {
             padding: 5px;
@@ -252,12 +251,16 @@ table,
         max-width: 100%;
          height: auto;">
     </div>
-    <div style="font-size:80px;
-    font-family: impact, sans-serif;font-weight:800; text-align:center; color:rgb(188, 26, 26);">Product Recall
-     <div style="text-align:center; font-size: 40px; font-family: impacy, sans-serif; color: rgb(188, 26, 26)">Cytodetox</div>
-    <div id="warnings">
+    <div class="title"></div>
+    <p style="text-align:center;">
+        <img style="margin-right:auto; display:inline; max-width: 40%; height: auto;" src="recall.png">
+    </p>
+    <div style="text-align:center; font-size: 40px; color: rgb(188, 26, 26)">Cytodetox</div>
+    <div>
+        <p style="text-align:center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Warning.svg/1200px-Warning.svg.png" width="70px" height="70px";>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Achtung.svg/628px-Achtung.svg.png" width="70px" height="70px";>
+    </p>
     </div>
 </div>
  
