--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -99,7 +99,7 @@ color:white;
 <button id="showInstructions">instructions</button>
 </p>
     <p style="text-align:center">
-        <a href="file:///Users/coralianblue/Desktop/MART%20441/MART-441/assignment-10/index.html">
+        <a href="https://bryceblue20.github.io/MART-441/assignment-10/index.html">
         <button id="restart">Restart</button></a>
     </p>
     <p style="text-align:center">
