--- a/assignment-10/index.html
+++ b/assignment-10/index.html
@@ -99,8 +99,8 @@ color:white;
 <button id="showInstructions">instructions</button>
 </p>
     <p style="text-align:center">
-        <a href="https://bryceblue20.github.io/MART-441/assignment-10/index.html">
-        <button id="restart">Restart</button></a>
+       
+        <button onClick="window.location.reload();" id="restart">Restart</button></a>
     </p>
     <p style="text-align:center">
     <canvas id="myCanvas" height="400" width="750"></canvas>
