--- a/assignment-11 (from example)/Canvas.html
+++ b/assignment-11 (from example)/Canvas.html
@@ -12,10 +12,14 @@
             border-width: 2px;
             
         }
+
+        #gameOver{
+            text-align:center;
+        }
     </style>
     <body>
         <canvas id="myCanvas" height="600" width="800"></canvas>
-
+        <div id="gameOver">Game Over</div>
       
     </body>
 </html>
