--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -3,7 +3,10 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Phaser.io</title>
-    <script src="./libs/phaser.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="
+https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js
+"></script>
 
     <script type="text/javascript" src="scripts/main.js"></script>
     <style>
