--- a/assignment-12/index.html
+++ b/assignment-12/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
     <meta charset="UTF-8" />
-    <title>Phaser.io</title>
+    <title>Diamond Master</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="
 https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js
